<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="Latest News"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_country"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_country"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/business_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:text="Business"
                android:textSize="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:onClick="business_click"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/entertainment_button"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:text="Entertainment"
                android:textSize="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:onClick="entertainment_click"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/general_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:text="General"
                android:textSize="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:onClick="general_click"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/health_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:text="Health"
                android:textSize="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:onClick="health_click"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/science_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:text="Science"
                android:textSize="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:onClick="science_click"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/sports_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:text="Sports"
                android:textSize="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:onClick="sports_click"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/technology_button"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:text="Technology"
                android:textSize="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:onClick="technology_click"
                tools:ignore="OnClick" />
        </LinearLayout>

    </HorizontalScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/view_search"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="33dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:lines="1"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_search" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/image_search"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="14dp"
        android:onClick="button_click"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintEnd_toStartOf="@+id/spinner_country"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick"
        android:translationZ="90dp"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>